[gd_scene load_steps=11 format=3 uid="uid://e6hkedahwcbx"]

[ext_resource type="Script" path="res://src/Player.gd" id="1_cx836"]
[ext_resource type="Texture2D" uid="uid://dhv77nls6qqs1" path="res://assets/riki.png" id="2_vx50x"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" id="3_rxa7u"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="4_dsjo1"]

[sub_resource type="Animation" id="Animation_d4wq3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_niuca"]
resource_name = "riki_fire"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_x6xb3"]
resource_name = "riki_hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_eyjg5"]
resource_name = "riki_idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DemoSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_de84b"]
_data = {
"RESET": SubResource("Animation_d4wq3"),
"riki_fire": SubResource("Animation_niuca"),
"riki_hurt": SubResource("Animation_x6xb3"),
"riki_idle": SubResource("Animation_eyjg5")
}

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_yvmq5"]
extents_x = 2812928
extents_y = 2473483

[node name="Player" type="SGArea2D" groups=["network_sync"]]
script = ExtResource("1_cx836")

[node name="DemoSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_vx50x")
hframes = 3
frame = 2

[node name="DemoAnimations" type="AnimationPlayer" parent="." groups=["network_sync"]]
libraries = {
"": SubResource("AnimationLibrary_de84b")
}
script = ExtResource("3_rxa7u")

[node name="CollisionShape2D" type="SGCollisionShape2D" parent="." groups=["network_sync"]]
shape = SubResource("SGRectangleShape2D_yvmq5")
position = Vector2(-1.25, 0)

[node name="PlayerAnimTimer" type="Node" parent="." groups=["network_sync"]]
script = ExtResource("4_dsjo1")

[connection signal="timeout" from="PlayerAnimTimer" to="." method="_on_player_anim_timer_timeout"]
